--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,21 @@
+#form-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.form-item {
+  margin-right: 1.8rem;
+}
+
 li {
+  display:inline-block;
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  margin: 5px;
+  padding: 5px;
+  background-color: grey;
+  border-color: black;
+  border-width: 2px;
+  border-radius: 5px;
+
 }
