--- a/css/main.css
+++ b/css/main.css
@@ -1,62 +1,80 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: 'Lacquer', sans-serif;
+  font-size: 62.5%;
   background-image: url('../images/7PN.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   color: red;
+  display: flex;
+  flex-flow: column wrap;
+  align-content: center;
 }
 
 #form-wrapper {
+  padding: 0.25rem;
   width: 100%;
   display: flex;
   flex-direction: row;
   text-align: center;
+  border: 0.25rem solid red;
+  border-radius: 0.25rem;
 }
 
 .form-item {
-  margin-right: 1.8rem;
+  font-size: 1.5rem;
   text-align: center;
+  margin: 0.75rem;
 }
 
 label.primary {
   display: block;
-  margin: 0.4em 0;
+  margin: 1rem;
 }
 
 #instrument-list {
   display: flex;
   flex-wrap: wrap;
   list-style-type: none;
+  color: black;
 }
 
 h1 {
   text-align: center;
-  font-size: 48px;
+  color: black;
+  font-size: 3.2rem;
+  text-shadow: 0.12rem 0.12rem 0.5rem #FF0000;
 }
 
 .instrumentListItem {
+  font-size: 1.25rem;
   margin: 0.5rem 0.5rem;
   padding: 0.5rem 0.8rem;
-  border: 1px solid #20437c;
+  border: 0.25rem solid #20437c;
   border-radius: 5%;
   background: #ddeaff;
 }
 
 #delete-all, .save {
-  font-size: 12px;
-  padding: 2px;
-  margin: 4px;
+  font-family: 'Lacquer', sans-serif;
+  font-size: 1rem;
+  padding: 0.5rem;
+  margin: 0.25rem;
   background-color: blue;
   color: yellow;
 }
 
 #delete-all:hover, .save:hover {
   background-color: #f44336;
-  border-radius: 4px;
+  border-radius: 0.25rem;
 }
 
 #delete-all:active, .save:active {
   background-color: #f44336;
-  border-radius: 4px;
-  transform: translateY(4px);
+  border-radius: 0.25rem;
+  transform: translateY(0.25rem);
 }
